Hero Section End

--- a/index.html
+++ b/index.html
@@ -4,9 +4,82 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="assets/images/fav-icon/icon.png" type="image/x-icon">
+    <title>bCom</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- Bootstrap css -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="assets/css/all.min.css">
+    <!-- Boxicons -->
+    <link rel="stylesheet" href="assets/css/boxicons.min.css">
 </head>
 <body>
-    
+    <!--=======================================================-->    
+    <!-- HEADER AREA START -->
+    <!--=======================================================-->
+    <header class="header-main-area align-items-center d-flex">
+        <div class="container fixed">
+            <div class="row align-items-center">
+                <div class="col-lg-2">
+                    <div class="header-logo"><a href="#"><img src="assets/images/bcom-logo.png" alt=""></a></div>
+                </div>
+                <div class="col-lg-8">
+                    <div class="header-main-menu">
+                        <ul>
+                            <li id="home"><a href="#">Home<i class="fas fa-angle-down"></i></a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Pages<i class="fas fa-angle-down"></i></a></li>
+                            <li><a href="#">Services<i class="fas fa-angle-down"></i></a></li>
+                            <li><a href="#">Blog<i class="fas fa-angle-down"></i></a></li>
+                            <li><a href="#">Shop<i class="fas fa-angle-down"></i></a></li>
+                            <li><a href="#">Contact<i class="fas fa-angle-down"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="header-right-btn"><a href="#">Get a Quote</a></div>
+                </div>
+            </div>
+        </div><!-- HEADER AREA END -->
+    </header>
+
+    <!--=======================================================-->    
+    <!-- HERO SECTION AREA START -->
+    <!--=======================================================-->
+    <section class="hero-section-area align-items-center d-flex">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="hero-section-info">
+                        <h5>Digital Agency Theme 2023</h5>
+                        <h1>We Will Help <br> Your Company <br> Grow Faster</h1>
+                        <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking overall empowerment.</p>
+                    </div>
+                    <div class="hero-section-btn">
+                        <a href="#" class="hero-section-main-btn">Get Started<i class="fas fa-arrow-down fa-rotate-270"></i></a>
+                        <a href="tel:(00) 123 456 789" class="hero-section-dial-btn"><i class='bx bx-phone'></i><span>(00) 123 456 789</span></a>
+                    </div>
+                </div>
+                <div class="col-lg-6"></div>
+            </div>
+        </div><!-- HERO SECTION AREA END -->
+    </section>
+
+
+
+
+    <div class="hero-section-area"></div>
+
+
+
+
+
+    <div class="header-hero-section"></div>
+    <!--==========================-->
+    <!-- Js Start -->
+    <!--==========================-->
+    <!-- bootstrap -->
+    <script src="assets/js/bootstrap.min.js"></script>
 </body>
 </html>
